@startuml F1_Bookmaker_Schema

skinparam linetype ortho
skinparam class {
  BackgroundColor #FAFAFA
  BorderColor #444444
  ArrowColor #333333
  FontName Arial
}
skinparam entity {
  BackgroundColor #FAFAFA
  BorderColor #444444
}
skinparam note {
  BackgroundColor #FFFDE7
  BorderColor #F9A825
}

title F1 Bookmaker Service — Database Schema (3NF)\n

' ============================================================
'  UŻYTKOWNICY I ROLE
' ============================================================

entity "roles" as roles {
  * role_id         : SMALLINT      <<PK>>
  --
  name              : VARCHAR(50)   <<UNIQUE, NOT NULL>>
  description       : TEXT
  created_at        : TIMESTAMPTZ   <<DEFAULT NOW()>>
}

entity "users" as users {
  * user_id         : UUID          <<PK, DEFAULT gen_random_uuid()>>
  --
  role_id           : SMALLINT      <<FK>>
  username          : VARCHAR(50)   <<UNIQUE, NOT NULL>>
  email             : VARCHAR(150)  <<UNIQUE, NOT NULL>>
  password_hash     : VARCHAR(255)  <<NOT NULL>>
  first_name        : VARCHAR(100)  <<NOT NULL>>
  last_name         : VARCHAR(100)  <<NOT NULL>>
  date_of_birth     : DATE          <<NOT NULL>>
  phone             : VARCHAR(20)
  is_active         : BOOLEAN       <<DEFAULT TRUE>>
  is_email_verified : BOOLEAN       <<DEFAULT FALSE>>
  created_at        : TIMESTAMPTZ   <<DEFAULT NOW()>>
  updated_at        : TIMESTAMPTZ
}

entity "user_sessions" as sessions {
  * session_id      : UUID          <<PK>>
  --
  user_id           : UUID          <<FK>>
  refresh_token_hash: VARCHAR(255)  <<NOT NULL>>
  ip_address        : INET
  user_agent        : TEXT
  created_at        : TIMESTAMPTZ   <<DEFAULT NOW()>>
  expires_at        : TIMESTAMPTZ   <<NOT NULL>>
  is_revoked        : BOOLEAN       <<DEFAULT FALSE>>
}

' ============================================================
'  PORTFELE I FINANSE
' ============================================================

entity "wallets" as wallets {
  * wallet_id       : UUID          <<PK>>
  --
  user_id           : UUID          <<FK, UNIQUE>>
  balance           : NUMERIC(12,2) <<DEFAULT 0.00>>
  currency          : CHAR(3)       <<DEFAULT 'PLN'>>
  updated_at        : TIMESTAMPTZ
}

entity "transactions" as transactions {
  * transaction_id  : UUID          <<PK>>
  --
  wallet_id         : UUID          <<FK>>
  type              : VARCHAR(20)   <<NOT NULL>>
  ' DEPOSIT | WITHDRAWAL | BET_STAKE | WIN_PAYOUT | REFUND | BONUS | CASHOUT
  amount            : NUMERIC(12,2) <<NOT NULL>>
  balance_before    : NUMERIC(12,2) <<NOT NULL>>
  balance_after     : NUMERIC(12,2) <<NOT NULL>>
  reference_id      : UUID
  description       : TEXT
  status            : VARCHAR(20)   <<NOT NULL>>
  ' PENDING | COMPLETED | FAILED | REVERSED
  created_at        : TIMESTAMPTZ   <<DEFAULT NOW()>>
}

entity "bonus_campaigns" as bonuses {
  * bonus_id        : UUID          <<PK>>
  --
  name              : VARCHAR(100)  <<NOT NULL>>
  type              : VARCHAR(30)   <<NOT NULL>>
  ' WELCOME | DEPOSIT | FREE_BET | CASHBACK
  value             : NUMERIC(10,2) <<NOT NULL>>
  min_deposit       : NUMERIC(10,2)
  wagering_multiplier: SMALLINT
  valid_from        : TIMESTAMPTZ
  valid_to          : TIMESTAMPTZ
  is_active         : BOOLEAN       <<DEFAULT TRUE>>
}

entity "user_bonuses" as user_bonuses {
  * user_bonus_id   : UUID          <<PK>>
  --
  user_id           : UUID          <<FK>>
  bonus_id          : UUID          <<FK>>
  awarded_at        : TIMESTAMPTZ   <<DEFAULT NOW()>>
  status            : VARCHAR(20)   <<NOT NULL>>
  ' ACTIVE | USED | EXPIRED | CANCELLED
  remaining_amount  : NUMERIC(10,2)
}

' ============================================================
'  DANE F1 — STRUKTURA
' ============================================================

entity "seasons" as seasons {
  * season_id       : SMALLINT      <<PK>>
  --
  year              : SMALLINT      <<UNIQUE, NOT NULL>>
  is_active         : BOOLEAN       <<DEFAULT FALSE>>
  champion_driver_id: INT
  champion_team_id  : INT
  created_at        : TIMESTAMPTZ   <<DEFAULT NOW()>>
}

entity "circuits" as circuits {
  * circuit_id      : SMALLINT      <<PK>>
  --
  name              : VARCHAR(100)  <<NOT NULL>>
  full_name         : VARCHAR(150)
  country           : VARCHAR(80)   <<NOT NULL>>
  city              : VARCHAR(80)   <<NOT NULL>>
  track_length_km   : NUMERIC(5,3)  <<NOT NULL>>
  num_of_laps       : SMALLINT      <<NOT NULL>>
  direction         : VARCHAR(20)
  ' CLOCKWISE | COUNTERCLOCKWISE
  altitude_m        : SMALLINT
  first_gp_year     : SMALLINT
  created_at        : TIMESTAMPTZ   <<DEFAULT NOW()>>
}

entity "circuit_records" as circuit_records {
  * record_id       : INT           <<PK>>
  --
  circuit_id        : SMALLINT      <<FK>>
  driver_id         : INT           <<FK>>
  season_id         : SMALLINT      <<FK>>
  lap_record_time   : INTERVAL      <<NOT NULL>>
  set_at_race_id    : INT           <<FK>>
}

entity "teams" as teams {
  * team_id         : INT           <<PK>>
  --
  name              : VARCHAR(100)  <<NOT NULL>>
  full_name         : VARCHAR(150)
  short_code        : CHAR(3)       <<UNIQUE>>
  nationality       : VARCHAR(80)
  base_city         : VARCHAR(80)
  founded_year      : SMALLINT
  engine_supplier   : VARCHAR(50)
  is_active         : BOOLEAN       <<DEFAULT TRUE>>
  created_at        : TIMESTAMPTZ   <<DEFAULT NOW()>>
}

entity "drivers" as drivers {
  * driver_id       : INT           <<PK>>
  --
  first_name        : VARCHAR(80)   <<NOT NULL>>
  last_name         : VARCHAR(80)   <<NOT NULL>>
  nationality       : VARCHAR(80)
  date_of_birth     : DATE
  driver_number     : SMALLINT
  abbreviation      : CHAR(3)       <<UNIQUE>>
  is_active         : BOOLEAN       <<DEFAULT TRUE>>
  debut_season_id   : SMALLINT      <<FK>>
  created_at        : TIMESTAMPTZ   <<DEFAULT NOW()>>
}

entity "driver_team_seasons" as driver_team {
  * dts_id          : INT           <<PK>>
  --
  driver_id         : INT           <<FK>>
  team_id           : INT           <<FK>>
  season_id         : SMALLINT      <<FK>>
  car_number        : SMALLINT
  role              : VARCHAR(20)   <<DEFAULT 'RACE_DRIVER'>>
  ' RACE_DRIVER | RESERVE | TEST
  -- UNIQUE(driver_id, season_id)
}

entity "cars" as cars {
  * car_id          : INT           <<PK>>
  --
  team_id           : INT           <<FK>>
  season_id         : SMALLINT      <<FK>>
  model_name        : VARCHAR(100)  <<NOT NULL>>
  engine_code       : VARCHAR(50)
  chassis_code      : VARCHAR(50)
  power_unit_supplier: VARCHAR(50)
  -- UNIQUE(team_id, season_id)
}

' ============================================================
'  WYŚCIGI I WYNIKI
' ============================================================

entity "races" as races {
  * race_id         : INT           <<PK>>
  --
  season_id         : SMALLINT      <<FK>>
  circuit_id        : SMALLINT      <<FK>>
  round_number      : SMALLINT      <<NOT NULL>>
  official_name     : VARCHAR(150)  <<NOT NULL>>
  race_datetime     : TIMESTAMPTZ
  qualifying_datetime: TIMESTAMPTZ
  sprint_datetime   : TIMESTAMPTZ
  fp1_datetime      : TIMESTAMPTZ
  fp2_datetime      : TIMESTAMPTZ
  fp3_datetime      : TIMESTAMPTZ
  status            : VARCHAR(20)   <<DEFAULT 'SCHEDULED'>>
  ' SCHEDULED | COMPLETED | CANCELLED | POSTPONED
  -- UNIQUE(season_id, round_number)
}

entity "race_results" as race_results {
  * result_id       : INT           <<PK>>
  --
  race_id           : INT           <<FK>>
  driver_id         : INT           <<FK>>
  team_id           : INT           <<FK>>
  finish_position   : SMALLINT
  grid_position     : SMALLINT
  points            : NUMERIC(4,1)  <<DEFAULT 0>>
  laps_completed    : SMALLINT
  total_race_time   : INTERVAL
  gap_to_leader     : INTERVAL
  fastest_lap_time  : INTERVAL
  fastest_lap_number: SMALLINT
  is_fastest_lap    : BOOLEAN       <<DEFAULT FALSE>>
  dnf_reason        : VARCHAR(50)
  ' ACCIDENT | MECHANICAL | DNF | DNS | DSQ
  status            : VARCHAR(20)   <<NOT NULL>>
  -- UNIQUE(race_id, driver_id)
}

entity "qualifying_results" as quali_results {
  * quali_id        : INT           <<PK>>
  --
  race_id           : INT           <<FK>>
  driver_id         : INT           <<FK>>
  team_id           : INT           <<FK>>
  position          : SMALLINT
  q1_time           : INTERVAL
  q2_time           : INTERVAL
  q3_time           : INTERVAL
  best_time         : INTERVAL
  eliminated_in     : SMALLINT
  ' NULL = Q3, 1 = Q1, 2 = Q2
  -- UNIQUE(race_id, driver_id)
}

entity "sprint_results" as sprint_results {
  * sprint_result_id: INT           <<PK>>
  --
  race_id           : INT           <<FK>>
  driver_id         : INT           <<FK>>
  team_id           : INT           <<FK>>
  finish_position   : SMALLINT
  grid_position     : SMALLINT
  points            : NUMERIC(4,1)  <<DEFAULT 0>>
  status            : VARCHAR(20)   <<NOT NULL>>
  -- UNIQUE(race_id, driver_id)
}

entity "practice_results" as practice_results {
  * practice_result_id: INT         <<PK>>
  --
  race_id           : INT           <<FK>>
  session_number    : SMALLINT      <<NOT NULL>>
  ' 1 | 2 | 3
  driver_id         : INT           <<FK>>
  team_id           : INT           <<FK>>
  position          : SMALLINT
  best_lap_time     : INTERVAL
  laps_completed    : SMALLINT
  -- UNIQUE(race_id, session_number, driver_id)
}

' ============================================================
'  KLASYFIKACJE (STANDINGS)
' ============================================================

entity "driver_standings_snapshots" as driver_standings {
  * snapshot_id     : INT           <<PK>>
  --
  race_id           : INT           <<FK>>
  driver_id         : INT           <<FK>>
  season_id         : SMALLINT      <<FK>>
  position          : SMALLINT      <<NOT NULL>>
  points            : NUMERIC(6,1)  <<NOT NULL>>
  wins              : SMALLINT      <<DEFAULT 0>>
  podiums           : SMALLINT      <<DEFAULT 0>>
  -- UNIQUE(race_id, driver_id)
}

entity "constructor_standings_snapshots" as cons_standings {
  * snapshot_id     : INT           <<PK>>
  --
  race_id           : INT           <<FK>>
  team_id           : INT           <<FK>>
  season_id         : SMALLINT      <<FK>>
  position          : SMALLINT      <<NOT NULL>>
  points            : NUMERIC(6,1)  <<NOT NULL>>
  wins              : SMALLINT      <<DEFAULT 0>>
  -- UNIQUE(race_id, team_id)
}

' ============================================================
'  ZAKŁADY — TYPY I KURSY
' ============================================================

entity "bet_categories" as bet_categories {
  * category_id     : SMALLINT      <<PK>>
  --
  name              : VARCHAR(80)   <<NOT NULL>>
  code              : VARCHAR(30)   <<UNIQUE>>
  description       : TEXT
}

entity "bet_types" as bet_types {
  * bet_type_id     : SMALLINT      <<PK>>
  --
  category_id       : SMALLINT      <<FK>>
  name              : VARCHAR(100)  <<NOT NULL>>
  code              : VARCHAR(50)   <<UNIQUE>>
  description       : TEXT
  requires_driver   : BOOLEAN       <<DEFAULT FALSE>>
  requires_team     : BOOLEAN       <<DEFAULT FALSE>>
  is_active         : BOOLEAN       <<DEFAULT TRUE>>
  ' Przykłady: RACE_WINNER, PODIUM_FINISH, POLE_POSITION,
  ' FASTEST_LAP, DRIVER_DNF, H2H_DRIVER, CONSTRUCTOR_WIN,
  ' SEASON_CHAMPION, CONSTRUCTOR_CHAMPION, MOST_WINS_SEASON,
  ' POINTS_OVER_UNDER, SAFETY_CAR_DEPLOYED, VIRTUAL_SC, etc.
}

entity "odds" as odds {
  * odds_id         : UUID          <<PK>>
  --
  race_id           : INT           <<FK>>
  bet_type_id       : SMALLINT      <<FK>>
  driver_id         : INT           <<FK, NULLABLE>>
  team_id           : INT           <<FK, NULLABLE>>
  odd_value         : NUMERIC(8,2)  <<NOT NULL>>
  margin_pct        : NUMERIC(5,2)
  is_active         : BOOLEAN       <<DEFAULT TRUE>>
  valid_from        : TIMESTAMPTZ   <<DEFAULT NOW()>>
  valid_to          : TIMESTAMPTZ
  created_by        : UUID          <<FK — users>>
  -- UNIQUE(race_id, bet_type_id, driver_id, team_id)
}

entity "odds_history" as odds_history {
  * history_id      : BIGINT        <<PK>>
  --
  odds_id           : UUID          <<FK>>
  race_id           : INT           <<FK>>
  bet_type_id       : SMALLINT      <<FK>>
  driver_id         : INT           <<FK, NULLABLE>>
  team_id           : INT           <<FK, NULLABLE>>
  old_value         : NUMERIC(8,2)  <<NOT NULL>>
  new_value         : NUMERIC(8,2)  <<NOT NULL>>
  change_reason     : VARCHAR(100)
  changed_at        : TIMESTAMPTZ   <<DEFAULT NOW()>>
  changed_by        : UUID          <<FK — users>>
}

' ============================================================
'  OBSTAWIANIE
' ============================================================

entity "bet_slips" as bet_slips {
  * slip_id         : UUID          <<PK>>
  --
  user_id           : UUID          <<FK>>
  type              : VARCHAR(20)   <<NOT NULL>>
  ' SINGLE | ACCUMULATOR | SYSTEM
  status            : VARCHAR(20)   <<DEFAULT 'PENDING'>>
  ' PENDING | WON | LOST | VOID | CASHOUT | PARTIAL_WIN
  stake             : NUMERIC(10,2) <<NOT NULL>>
  potential_win     : NUMERIC(12,2) <<NOT NULL>>
  actual_win        : NUMERIC(12,2)
  combined_odd      : NUMERIC(10,4)
  user_bonus_id     : UUID          <<FK, NULLABLE>>
  cashout_value     : NUMERIC(12,2)
  placed_at         : TIMESTAMPTZ   <<DEFAULT NOW()>>
  settled_at        : TIMESTAMPTZ
}

entity "bet_selections" as bet_selections {
  * selection_id    : UUID          <<PK>>
  --
  slip_id           : UUID          <<FK>>
  odds_id           : UUID          <<FK>>
  odd_value_at_bet  : NUMERIC(8,2)  <<NOT NULL>>
  status            : VARCHAR(20)   <<DEFAULT 'PENDING'>>
  ' PENDING | WON | LOST | VOID | PUSH
  settled_at        : TIMESTAMPTZ
}

entity "cashout_requests" as cashouts {
  * cashout_id      : UUID          <<PK>>
  --
  slip_id           : UUID          <<FK>>
  user_id           : UUID          <<FK>>
  cashout_value     : NUMERIC(12,2) <<NOT NULL>>
  status            : VARCHAR(20)   <<NOT NULL>>
  ' REQUESTED | APPROVED | REJECTED
  requested_at      : TIMESTAMPTZ   <<DEFAULT NOW()>>
  resolved_at       : TIMESTAMPTZ
}

' ============================================================
'  POWIADOMIENIA
' ============================================================

entity "notifications" as notifications {
  * notification_id : UUID          <<PK>>
  --
  user_id           : UUID          <<FK>>
  type              : VARCHAR(50)   <<NOT NULL>>
  ' BET_SETTLED | RACE_REMINDER | ODDS_CHANGE | BONUS | SYSTEM
  title             : VARCHAR(200)  <<NOT NULL>>
  body              : TEXT
  is_read           : BOOLEAN       <<DEFAULT FALSE>>
  reference_id      : UUID
  created_at        : TIMESTAMPTZ   <<DEFAULT NOW()>>
}

' ============================================================
'  RELACJE — UŻYTKOWNICY
' ============================================================
roles           ||--o{ users             : "has role"
users           ||--|| wallets           : "owns"
users           ||--o{ user_sessions     : "opens"
wallets         ||--o{ transactions      : "records"
users           ||--o{ user_bonuses      : "receives"
bonus_campaigns ||--o{ user_bonuses      : "applied via"
users           ||--o{ notifications     : "receives"

' ============================================================
'  RELACJE — F1 STRUKTURA
' ============================================================
seasons         ||--o{ driver_team       : "spans"
drivers         ||--o{ driver_team       : "drives in"
teams           ||--o{ driver_team       : "employs"
teams           ||--o{ cars             : "fields"
seasons         ||--o{ cars             : "used in"
seasons         ||--o{ races            : "contains"
circuits        ||--o{ races            : "hosts"
circuits        ||--o{ circuit_records  : "holds"
drivers         ||--o{ circuit_records  : "set by"
seasons         ||--o{ circuit_records  : "in season"

' ============================================================
'  RELACJE — WYNIKI
' ============================================================
races           ||--o{ race_results      : "has"
races           ||--o{ quali_results     : "has"
races           ||--o{ sprint_results    : "has"
races           ||--o{ practice_results  : "has"
drivers         ||--o{ race_results      : "scores"
drivers         ||--o{ quali_results     : "scores"
drivers         ||--o{ sprint_results    : "scores"
drivers         ||--o{ practice_results  : "scores"
teams           ||--o{ race_results      : "scores"
teams           ||--o{ quali_results     : "scores"

' ============================================================
'  RELACJE — STANDINGS
' ============================================================
races           ||--o{ driver_standings  : "snapshot after"
drivers         ||--o{ driver_standings  : "recorded for"
seasons         ||--o{ driver_standings  : "in season"
races           ||--o{ cons_standings    : "snapshot after"
teams           ||--o{ cons_standings    : "recorded for"
seasons         ||--o{ cons_standings    : "in season"

' ============================================================
'  RELACJE — KURSY I ZAKŁADY
' ============================================================
bet_categories  ||--o{ bet_types         : "groups"
bet_types       ||--o{ odds              : "priced via"
races           ||--o{ odds              : "has odds for"
drivers         |o--o{ odds              : "subject of"
teams           |o--o{ odds              : "subject of"
odds            ||--o{ odds_history      : "tracks changes"
odds            ||--o{ bet_selections    : "chosen in"
users           ||--o{ bet_slips         : "places"
bet_slips       ||--o{ bet_selections    : "contains"
bet_slips       |o--o{ cashouts          : "can request"
users           ||--o{ cashouts          : "requests"
user_bonuses    |o--o{ bet_slips         : "applied to"

@enduml
